# CrewAI-Invest-Reporter

./: .gitignore  Makefile  README.md  bbas3_investment_report.md  pyproject.toml
knowledge/: user_preference.txt
src/crewai_invest_reporter/: crew.py  main.py
src/crewai_invest_reporter/config/: agents.yaml  tasks.yaml
src/crewai_invest_reporter/tools/: custom_tool.py  news_search_tool.py  stock_fundamentals_tool.py
